# ocaml_taint_analyzer

./: .gitignore  README.md  parser.js  project.txt
analyzer/: ast.json  bundled_map.js  bundled_map.js.map  dune-project  package-lock.json  package.json
analyzer/_build/: .db  .digest-db  log
analyzer/_build/default/: analyzer.dune-package  analyzer.install  analyzer.opam
analyzer/_build/default/.dune/: configurator  configurator.v2
analyzer/_build/default/lib/: analyzer_lib.cma  analyzer_lib.cmxa  analyzer_lib.cmxs  analyzer_lib.ml-gen  ast.ml
analyzer/_build/default/lib/.analyzer_lib.objs/: analyzer_lib__Analysis.impl.all-deps  analyzer_lib__Analysis.impl.d  analyzer_lib__Parser.impl.d
analyzer/_build/default/lib/.analyzer_lib.objs/byte/: analyzer_lib.cmi  analyzer_lib.cmo  analyzer_lib.cmt  analyzer_lib__Analysis.cmi  analyzer_lib__Analysis.cmo  analyzer_lib__Analysis.cmt  analyzer_lib__Ast.cmi  analyzer_lib__Ast.cmo  analyzer_lib__Ast.cmt  analyzer_lib__Parser.cmi  analyzer_lib__Parser.cmo  analyzer_lib__Parser.cmt
analyzer/_build/default/lib/.analyzer_lib.objs/native/: analyzer_lib.cmx  analyzer_lib__Analysis.cmx  analyzer_lib__Ast.cmx  analyzer_lib__Parser.cmx
analyzer/_build/default/lib/.merlin-conf/: lib-analyzer_lib
analyzer/_build/default/test/.merlin-conf/: exe-test_analyzer
analyzer/_build/default/test/.test_analyzer.eobjs/byte/: dune__exe__Test_analyzer.cmi  dune__exe__Test_analyzer.cmti
analyzer/_build/install/default/lib/analyzer/: META  dune-package  opam
analyzer/lib/: analysis.ml  dune  parser.ml
analyzer/test/: dune
(+2 files in other folders)
